--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 </head>
 <body>
     <div class="container">
-        <i class="bi bi-asterisk"></i>
     <h1>Mis primeros pasos con GIT</h1>
     <dl>
         <dt>GIT init</dt>
         <dt>inicializar repositorio con GIT</dt>
         <dt>GIT status</dt>
-        <dt>inicializar repositorio con GIT</dt>
+        <dt>muestra el estado del directorio de trabajo y del área de entorno de ensayo</dt>
+        <dt>GIT add</dt>
+        <dt>añade archivo al seguimiento</dt>
+        <dt>GIT commit</dt>
+        <dt>confirmacion de guardado</dt>
     </dl>
 
     </div>
