--- a/index.html
+++ b/index.html
@@ -13,15 +13,22 @@
     <h1>Mis primeros pasos con GIT</h1>
     <dl>
         <dt>GIT init</dt>
-        <dt>inicializar repositorio con GIT</dt>
+        <dd>inicializar repositorio con GIT</dd>
         <dt>GIT status</dt>
-        <dt>muestra el estado del directorio de trabajo y del área de entorno de ensayo</dt>
-        <dt>GIT add</dt>
-        <dt>añade archivo al seguimiento</dt>
-        <dt>GIT commit</dt>
-        <dt>confirmacion de guardado</dt>
+        <dd>muestra el estado del directorio de trabajo y del área de entorno de ensayo</dd>
+        <dt>GIT add + 'archivos separados por espacios' o add --all</dt>
+        <dd>añade archivo al seguimiento</dd>
+        <dt>GIT commit -m</dt>
+        <dd>confirmacion de guardado</dd>
     </dl>
-
+    <h2>Subir repositorio</h2>
+    <dl>
+        <dt>GIT remote add nombre rama</dt>
+        <dd>añadir repositorio remoto a nuestro repositorio local</dd>
+        <dt>GIT push nombre rama</dt>
+        <dd>subir archivo</dd>
+    </dl>
+    
     </div>
 </body>
 </html>
