--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <dt>GIT init</dt>
         <dd>inicializar repositorio con GIT</dd>
         <dt>GIT status</dt>
-        <dd>muestra el estado del directorio de trabajo y del área de entorno de ensayo</dd>
+        <dd>muestra el estado del directorio de trabajo y del área de entorno de trabajo</dd>
         <dt>GIT add + 'archivos separados por espacios' o add --all</dt>
         <dd>añade archivo al seguimiento</dd>
         <dt>GIT commit -m</dt>
