--- a/index.html
+++ b/index.html
@@ -1,34 +1,67 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indice</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-</head>
-<body>
-    <div class="container">
-    <h1>Mis primeros pasos con GIT</h1>
-    <dl>
-        <dt>GIT init</dt>
-        <dd>inicializar repositorio con GIT</dd>
-        <dt>GIT status</dt>
-        <dd>muestra el estado del directorio de trabajo y del área de entorno de trabajo</dd>
-        <dt>GIT add + 'archivos separados por espacios' o add --all</dt>
-        <dd>añade archivo al seguimiento</dd>
-        <dt>GIT commit -m</dt>
-        <dd>confirmacion de guardado</dd>
-    </dl>
-    <h2>Subir repositorio</h2>
-    <dl>
-        <dt>GIT remote add nombre rama</dt>
-        <dd>añadir repositorio remoto a nuestro repositorio local</dd>
-        <dt>GIT push nombre rama</dt>
-        <dd>subir archivo</dd>
-    </dl>
     
-    </div>
+    <title>Document</title>
+</head>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<body>
+<div class="container">
+    <h2></h2>
+    <dl>
+        <dt>  pwd</dt>
+        <dd> donde estoy</dd>
+        <dt>  ls</dt>
+        <dd> listar </dd>
+        <dt> mkdir</dt>
+        <dd> crear directorio</dd>
+        <dt>  cd</dt>
+        <dd> cambiar directorio </dd>
+        <dt>  clear</dt>
+        <dd> limpiar consoloa </dd>
+        <dt>  touch</dt>
+        <dd> crear archivo </dd>
+        <dt>  echo 'string '> index.html</dt>
+        <dd> crear archivo con texto dentro</dd>
+    </dl>
+    <h1> Mis primeros pasos con git</h1>
+    <dl>
+        <dt>  init</dt>
+        <dd> inicializar un repositorio con git</dd>
+        <dt>  status</dt>
+        <dd> muestra el estado del directorio de trabajo y del área del entorno de trabajo. </dd>
+        <dt>  add  archivo1 archivo2 archivo3</dt>
+        <dd> agrega un archivo o varios al seguimento de git </dd>
+        <dt>  add --all</dt>
+        <dd> agrega  todos al seguimento de git </dd>
+        <dt>  commit -m</dt>
+        <dd> Confirmación de cambios </dd>
+        <dt> branch nombre-rama</dt>
+        <dd> Crear rama </dd>
+        <dt> checkout rama</dt>
+        <dd> Cambiar rama </dd>
+        <dt> branch -a </dt>
+        <dd> Listar ramas </dd>
+        <dt> branch -D nombre-rama</dt>
+        <dd> Borrar rama </dd>
+        <dt> Merge</dt>
+        <dd> fusionar rama al directorio en el que estas </dd>
+    </dl>
+    <h2>Subir a github</h2>
+    <dl>
+        <dd>remote add nombrerepoex direccion-git</dd>
+        <dt>Añadir un repositorio remoto a nuestro repositorio local</dt>
+        <dd>push nombrerepoex master</dd>
+        <dt>Subir archivo</dt>
+        <dd>pull</dd>
+        <dt>Actualizar desde repositorio remoto</dt>
+        <dd>clone</dd>
+        <dt>clona un repositorio en otro equipo</dt>
+    </dl>    <
+
+   </div> 
 </body>
 </html>
