modifico git branch

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <dd> Crear rama </dd>
         <dt> checkout rama</dt>
         <dd> Cambiar rama </dd>
-        <dt> branch -a </dt>
+        <dt> branch  </dt>
         <dd> Listar ramas </dd>
         <dt> branch -D nombre-rama</dt>
         <dd> Borrar rama </dd>
