--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <dd> crear archivo </dd>
         <dt>  echo 'string '> index.html</dt>
         <dd> crear archivo con texto dentro</dd>
+        <dt>exit</dt>
+        <dd>salir de la terminal</dd>
     </dl>
     <h1> Mis primeros pasos con git</h1>
     <dl>
@@ -60,8 +62,9 @@
         <dt>Actualizar desde repositorio remoto</dt>
         <dd>clone</dd>
         <dt>clona un repositorio en otro equipo</dt>
-    </dl>    <
 
+    </dl>    
+        
    </div> 
 </body>
 </html>
